--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # My SQL
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:porta/nome da base
-spring.datasource.data-username=root
-spring.datasource.password=root
+#spring.jpa.hibernate.ddl-auto=none
+#spring.datasource.url=jdbc:mysql://localhost:porta/nome da base
+#spring.datasource.data-username=root
+#spring.datasource.password=root
 
 # exibe os camandos SQL
 spring.jpa.show-sql=true
